# bpa-ingest-validation

./: README.md  pyproject.toml  util.py
bpa-ingest-validation/: ingest_utils.py  pyproject.toml
bpa-ingest-validation/src/bpa_ingest_validation/: bpa_ingest_utils.py  bpa_ingest_validations.py  excel_wrapper.py  metadata_handler.py  test_ingest_utils.py  test_ingest_validations.py
bpa-ingest-validation/tests/: test_ingest_utils.py
bpaingestvalidation/: metadata_handler.py
