[project]
name = "bpa-ingest-validation"
version = "0.1.4"
description = ""
authors = [
    {name = "Brigette Gonch",email = "b.gonch@qcif.edu.au"}
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry]
packages = [{include = "bpa_ingest_validation", from = "bpa-ingest-validation/src"}]



[tool.poetry.dependencies]
pandas = "^2.3.3"
unipath = "^1.1"
xlrd = "^1.2.0"
python-dateutil = "^2.9.0.post0"
openpyxl = "^3.1.5"
setuptools = "^80.9.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
