[project]
name = "bpa-ingest-validation"
version = "0.1.0"
description = ""
authors = [
    {name = "Brigette Gonch",email = "b.gonch@qcif.edu.au"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "bpa_ingest_validation", from = "src"}]


dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "unipath (>=1.1,<2.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
